syntax = "proto3";

option csharp_namespace = "LibraRestaurant.Proto.MenuItems";

import "MenuItems/Models.proto";

service ItemsApi {
  rpc GetByIds(GetItemsByIdsRequest) returns (GetItemsByIdsResult);
}
